trunk/Archive2/a2/8522f39b0723b6/output
main.cpp: In function 'main':
main.cpp:6:5: warning: ISO C90 does not support the 'z' gnu_printf length modifier [-Wformat=]
     printf("%zu\n", sizeof(int64_t));
     ^
main.cpp:11:5: error: ISO C90 forbids mixed declarations and code [-Wpedantic]
     int64_t n = 17;
     ^
